<resources>
    <string name="app_name">Maple</string>
    <string name="username">Username</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="search">Search</string>
</resources>